--- a/0.1.html
+++ b/0.1.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href="style.css" rel="stylesheet">
+</head>  
 <body>
 
 <a href="www.yeet.com">Anchor link</a>
 
 <table>
     <tr>
-      <td>me</td>
+      <td id="tab">me</td>
       <td>u</td>
+    </tr>
+    <tr>
+      <th>wee</th>
+      <th>juu</th>
+      <th>oy</th>
     </tr>
 </table>
 
 <ul>
 <li>me</li>
-<li>u</li>
+<li class="uu">u</li>
 <li>o</li>
 </ul>
+
+<form>
+  <label>where does it go</label><br>
+  <input type="text" id="inp" name="inp"><br>
+</form>
 
 <img src="sh.jfif">
 
